--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "presets": [
       "env",
       "react"
+    ],
+    "plugins": [
+      "transform-class-properties"
     ]
   },
   "repository": {
@@ -26,16 +29,18 @@
   },
   "homepage": "https://github.com/bmkiefer/react-fundamentals-class#readme",
   "dependencies": {
-    "axios": "^0.16.1",
+    "babel-polyfill": "^6.23.0",
     "prop-types": "^15.5.9",
     "query-string": "^4.3.4",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
-    "react-router-dom": "^4.1.1"
+    "react-router-dom": "^4.1.1",
+    "whatwg-fetch": "^2.0.3"
   },
   "devDependencies": {
     "babel-core": "^6.24.1",
     "babel-loader": "^7.0.0",
+    "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-preset-env": "^1.4.0",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.1",
